Fix issue with header covering topics bar on iOS

--- a/scss/blog/_menu.scss
+++ b/scss/blog/_menu.scss
@@ -18,11 +18,19 @@
 		margin-bottom: 2em;
 		padding: 1em 0;
 	}
+	
+	.single .sidebar-reveal {
+		margin-bottom: 0;
+	}
 
 	.temp-burger {
 		width: 90%;
 		display: block;
 		margin: 0 auto;
+	}
+
+	.home, .archive {
+		margin-top: 0;
 	}
 }
 
